src/main/java/com/example/demo/common/error/ErrorCode.java
package com.example.demo.common.error;

public interface ErrorCode {
    String code();
}
